prevent overlapping main header

--- a/assets/platform/scss/style.scss
+++ b/assets/platform/scss/style.scss
@@ -163,11 +163,10 @@ code {
 
 // Alerts =====================================================================
 .alert-box {
-	position: absolute;
-	left:240px;
-	right:0;
+	position: relative;
 	background: $brand-primary;
 	color: #fff;
+    width:100%;
 }
 
 .alert-effect-slidetop {
